--- a/app/src/main/res/layout/top_fragment.xml
+++ b/app/src/main/res/layout/top_fragment.xml
@@ -24,23 +24,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.06" />
+                app:layout_constraintGuide_percent="0.04" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.94" />
+                app:layout_constraintGuide_percent="0.96" />
 
             <TextView
                 android:id="@+id/bookName"
-                android:layout_width="340dp"
-                android:layout_height="31dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="モゲます 総集編"
                 android:textAlignment="gravity"
                 android:textSize="24sp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintStart_toStartOf="@+id/guideline"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -50,7 +52,7 @@
                 android:layout_width="86dp"
                 android:layout_height="28dp"
                 android:layout_centerInParent="true"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:background="@drawable/flame_safe"
                 android:paddingLeft="4dp"
@@ -69,7 +71,7 @@
                 android:layout_width="126dp"
                 android:layout_height="28dp"
                 android:layout_centerInParent="true"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:background="@drawable/flame_spicy"
                 android:paddingLeft="4dp"
@@ -88,7 +90,7 @@
                 android:layout_width="86dp"
                 android:layout_height="28dp"
                 android:layout_centerInParent="true"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:background="@drawable/flame_r"
                 android:paddingLeft="4dp"
@@ -107,7 +109,7 @@
                 android:layout_width="106dp"
                 android:layout_height="28dp"
                 android:layout_centerInParent="true"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:background="@drawable/flame_grotesque"
                 android:paddingLeft="4dp"
@@ -126,7 +128,7 @@
                 android:layout_width="86dp"
                 android:layout_height="28dp"
                 android:layout_centerInParent="true"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:background="@drawable/flame_non"
                 android:paddingLeft="4dp"
@@ -143,14 +145,24 @@
 
             <ImageView
                 android:id="@+id/BookView"
-                android:layout_width="340dp"
+                android:layout_width="match_parent"
                 android:layout_height="516dp"
                 android:layout_marginTop="36dp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintEnd_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/bookName"
                 app:srcCompat="@drawable/test_pk"
                 tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+            <TextView
+                android:id="@+id/nullpo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:layout_marginTop="70dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/BookView" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
