--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -33,7 +33,7 @@
             <EditText
                 android:id="@+id/editTitle"
                 android:layout_width="350dp"
-                android:layout_height="41dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:ems="10"
                 android:hint="Title"
@@ -55,7 +55,7 @@
             <EditText
                 android:id="@+id/editAuthorName"
                 android:layout_width="350dp"
-                android:layout_height="41dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:ems="10"
                 android:hint="Name"
@@ -77,7 +77,7 @@
             <EditText
                 android:id="@+id/editPublisher"
                 android:layout_width="350dp"
-                android:layout_height="41dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:ems="10"
                 android:hint="Publisher"
@@ -99,17 +99,17 @@
             <EditText
                 android:id="@+id/editIssuedDate"
                 android:layout_width="350dp"
-                android:layout_height="41dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:clickable="false"
+                android:cursorVisible="false"
                 android:ems="10"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:hint="2020/1/1"
                 android:inputType="textPersonName"
                 android:maxLength="15"
                 android:textSize="20sp"
-                android:clickable="false"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editPublisher" />
@@ -126,7 +126,7 @@
             <EditText
                 android:id="@+id/editPage"
                 android:layout_width="350dp"
-                android:layout_height="41dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:ems="10"
                 android:hint="100"
@@ -149,17 +149,17 @@
             <EditText
                 android:id="@+id/editGenre"
                 android:layout_width="350dp"
-                android:layout_height="41dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:clickable="false"
+                android:cursorVisible="false"
                 android:ems="10"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:hint="漫画"
                 android:inputType="textPersonName"
                 android:maxLength="15"
                 android:textSize="18sp"
-                android:clickable="false"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editPage" />
@@ -176,14 +176,14 @@
             <EditText
                 android:id="@+id/editCopyright"
                 android:layout_width="350dp"
-                android:layout_height="41dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:ems="10"
-                android:hint="本作品は二次創作ではない"
                 android:clickable="false"
                 android:cursorVisible="false"
+                android:ems="10"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
+                android:hint="本作品は二次創作ではない"
                 android:maxLength="15"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -211,17 +211,17 @@
             <EditText
                 android:id="@+id/editRating"
                 android:layout_width="350dp"
-                android:layout_height="41dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:clickable="false"
+                android:cursorVisible="false"
                 android:ems="10"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:hint="全年齢対象"
                 android:inputType="textPersonName"
                 android:maxLength="15"
                 android:textSize="18sp"
-                android:clickable="false"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editCopyright" />
@@ -238,7 +238,7 @@
             <EditText
                 android:id="@+id/editPossession"
                 android:layout_width="350dp"
-                android:layout_height="41dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:ems="10"
                 android:hint="デジタル"
